--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -92,69 +92,91 @@ $export-ui-classes: true !default;
 @include palette-set('input-radio--fill', palette('input-accent'));
 
 // Color sequences
+@mixin color-sequence($name, $color_list, $with-dark: true) {
+  @each $current_color in $color_list {
+    $i: index($color_list, $current_color);
+    @include palette-set('#{$name}-#{$i}', color($current_color));
+    @if $with-dark {
+      @include palette-set('#{$name}-#{$i}--dark', color('#{$current_color}--dark'));
+    }
+  }
+}
 
 // Root sequence
-@include palette-set('primary-color-seq-1', color('neon-coral'));
-@include palette-set('primary-color-seq-2', color('sea-serpent'));
-@include palette-set('primary-color-seq-3', color('purple-pizazz'));
-@include palette-set('primary-color-seq-4', color('neon-carrot'));
-@include palette-set('primary-color-seq-5', color('kiwi'));
-@include palette-set('primary-color-seq-6', color('cerulean-blue'));
-@include palette-set('primary-color-seq-7', color('paradise-pink'));
-@include palette-set('primary-color-seq-8', color('mustard'));
+$root-colors: (
+  'neon-coral',
+  'sea-serpent',
+  'purple-pizazz',
+  'neon-carrot',
+  'kiwi',
+  'cerulean-blue',
+  'paradise-pink',
+  'mustard'
+);
+
+@include color-sequence('primary-color-seq', $root-colors, true);
 
 // Edge sequence
-@include palette-set('edge-color-seq-1', color('mustard'));
-@include palette-set('edge-color-seq-2', color('purple-pizazz'));
-@include palette-set('edge-color-seq-3', color('neon-coral'));
-@include palette-set('edge-color-seq-4', color('kiwi'));
-@include palette-set('edge-color-seq-5', color('paradise-pink'));
-@include palette-set('edge-color-seq-6', color('tomato'));
-@include palette-set('edge-color-seq-7', color('sea-serpent'));
-@include palette-set('edge-color-seq-8', color('slate-blue'));
-@include palette-set('edge-color-seq-9', color('sea-green'));
-@include palette-set('edge-color-seq-10', color('cerulean-blue'));
+$edge-colors: (
+  'mustard',
+  'purple-pizazz',
+  'neon-coral',
+  'kiwi',
+  'paradise-pink',
+  'tomato',
+  'sea-serpent',
+  'slate-blue',
+  'sea-green',
+  'cerulean-blue'
+);
+
+@include color-sequence('edge-color-seq', $edge-colors, false);
 
 // Node Sequence
 @include palette-set('node-label', color('white'));
-@include palette-set('node-color-seq-1', color('neon-coral'));
-@include palette-set('node-color-seq-1--dark', color('neon-coral--dark'));
-@include palette-set('node-color-seq-2', color('sea-serpent'));
-@include palette-set('node-color-seq-2--dark', color('sea-serpent--dark'));
-@include palette-set('node-color-seq-3', color('purple-pizazz'));
-@include palette-set('node-color-seq-3--dark', color('purple-pizazz--dark'));
-@include palette-set('node-color-seq-4', color('neon-carrot'));
-@include palette-set('node-color-seq-4--dark', color('neon-carrot--dark'));
-@include palette-set('node-color-seq-5', color('kiwi'));
-@include palette-set('node-color-seq-5--dark', color('kiwi--dark'));
-@include palette-set('node-color-seq-6', color('cerulean-blue'));
-@include palette-set('node-color-seq-6--dark', color('cerulean-blue--dark'));
-@include palette-set('node-color-seq-7', color('paradise-pink'));
-@include palette-set('node-color-seq-7--dark', color('paradise-pink--dark'));
-@include palette-set('node-color-seq-8', color('mustard'));
-@include palette-set('node-color-seq-8--dark', color('mustard--dark'));
+
+$node-colors: (
+  'neon-coral',
+  'sea-serpent',
+  'purple-pizazz',
+  'neon-carrot',
+  'kiwi',
+  'cerulean-blue',
+  'paradise-pink',
+  'mustard'
+);
+
+@include color-sequence('node-color-seq', $node-colors, true);
 
 // Ordinal Bin Sequence
-@include palette-set('ord-color-seq-1', color('sea-green'));
-@include palette-set('ord-color-seq-2', color('sea-serpent'));
-@include palette-set('ord-color-seq-3', color('tomato'));
-@include palette-set('ord-color-seq-4', color('neon-carrot'));
-@include palette-set('ord-color-seq-5', color('kiwi'));
-@include palette-set('ord-color-seq-6', color('cerulean-blue'));
-@include palette-set('ord-color-seq-7', color('paradise-pink'));
-@include palette-set('ord-color-seq-8', color('mustard'));
+$ordinal-colors: (
+  'sea-green',
+  'sea-serpent',
+  'tomato',
+  'neon-carrot',
+  'kiwi',
+  'cerulean-blue',
+  'paradise-pink',
+  'mustard'
+);
+
+@include color-sequence('ord-color-seq', $ordinal-colors, true);
 
 // Categorical Bin Sequence
-@include palette-set('cat-color-seq-1', color('sea-serpent'));
-@include palette-set('cat-color-seq-2', color('purple-pizazz'));
-@include palette-set('cat-color-seq-3', color('paradise-pink'));
-@include palette-set('cat-color-seq-4', color('kiwi'));
-@include palette-set('cat-color-seq-5', color('cerulean-blue'));
-@include palette-set('cat-color-seq-6', color('mustard'));
-@include palette-set('cat-color-seq-7', color('neon-carrot'));
-@include palette-set('cat-color-seq-8', color('barbie-pink'));
-@include palette-set('cat-color-seq-9', color('tomato'));
-@include palette-set('cat-color-seq-10', color('slate-blue'));
+$categorical-colors: (
+  'sea-serpent',
+  'purple-pizazz',
+  'paradise-pink',
+  'kiwi',
+  'cerulean-blue',
+  'mustard',
+  'neon-carrot',
+  'barbie-pink',
+  'tomato',
+  'slate-blue'
+);
+
+@include color-sequence('cat-color-seq', $categorical-colors, true);
 
 $base-line-height: 1.5;
 $netcanvas-font-stack: 'Quicksand', 'Open Sans', sans-serif;
