--- a/styles/components/_icons.scss
+++ b/styles/components/_icons.scss
@@ -372,7 +372,7 @@ $-icon-color-modifiers: (
     }
 
     .cls-7 {
-      fill: rgba(255, 255, 255, 0.2);
+      fill: rgba(255, 255, 255, 0.2);  //sass-lint:disable-line no-color-literals
     }
 
     @each $ordinal-color in $ordinal-colors {
@@ -392,7 +392,7 @@ $-icon-color-modifiers: (
     }
 
     .cls-7 {
-      fill: rgba(255, 255, 255, 0.2);
+      fill: rgba(255, 255, 255, 0.2);  //sass-lint:disable-line no-color-literals
     }
 
     @each $categorical-color in $categorical-colors {
