Add a progress component

--- a/styles/components/_all.scss
+++ b/styles/components/_all.scss
@@ -7,5 +7,6 @@
 @import 'node';
 @import 'expandable';
 @import 'narrative-panel';
-@import './dialog';
-@import './modal';
+@import 'dialog';
+@import 'modal';
+@import 'progress';
