better invalid state styling for inputs

--- a/styles/components/form/fields/_checkbox-group.scss
+++ b/styles/components/form/fields/_checkbox-group.scss
@@ -13,10 +13,17 @@ $component-name: form-field-checkbox-group;
   &__error {
     opacity: 0;
     max-height: 0;
-    color: var(--error);
-    margin: unit(0.5) 0;
+    background: var(--error);
+    color: var(--text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
+    background: var(--error);
+    padding: 0.5rem 0.25rem;
+    display: flex;
+
+    svg {
+      max-height: 1.2rem;
+    }
   }
 
   &--has-error {
@@ -24,5 +31,11 @@ $component-name: form-field-checkbox-group;
       opacity: 1;
       max-height: 50px;
     }
+
+    .form-field {
+      margin-bottom: 0;
+      border: 0.1rem solid var(--error);
+    }
+
   }
 }
