--- a/styles/components/form/fields/_text.scss
+++ b/styles/components/form/fields/_text.scss
@@ -1,20 +1,18 @@
 $module-name: form-field-text;
 
 .#{$module-name} {
-  @include form-field;
-  display: block;
-  position: relative;
-  padding: 0.5em 1em;
 
   &__input {
+    display: block;
+    position: relative;
+    padding: 0.5em 1em;
     font-family: var(--body-font-family);
     font-size: inherit;
     font-weight: inherit;
-    background-color: transparent;
+    background-color: var(--input-background);
     width: 100%;
     color: var(--input-text);
     border: 0;
-    padding: 1em 0 0.5em;
     border-bottom-width: unit(0.25);
     border-bottom-style: solid;
     border-bottom-color: transparent;
@@ -24,15 +22,6 @@ $module-name: form-field-text;
       color: var(--input-placeholder);
       font-style: italic;
     }
-  }
-
-  &__error {
-    opacity: 0;
-    max-height: 0;
-    color: var(--error);
-    margin: unit(0.5) 0;
-    transition: opacity var(--animation-easing) var(--animation-duration-standard),
-    max-height var(--animation-easing) var(--animation-duration-standard);
   }
 
   &--has-focus,
@@ -46,22 +35,32 @@ $module-name: form-field-text;
     }
   }
 
-  &--has-error {
-    .#{$module-name}__input {
-      border-bottom-color: var(--error) !important; //sass-lint:disable-line no-important
-    }
+  &__error {
+    opacity: 0;
+    max-height: 0;
+    background: var(--error);
+    color: var(--text);
+    transition: opacity var(--animation-easing) var(--animation-duration-standard),
+    max-height var(--animation-easing) var(--animation-duration-standard);
+    background: var(--error);
+    padding: 0.5rem 0.25rem;
+    display: flex;
 
+    svg {
+      max-height: 1.2rem;
+    }
+  }
+
+  &--has-error {
     .#{$module-name}__error {
       opacity: 1;
       max-height: 50px;
     }
 
-    .#{$module-name}__icon--error {
-      opacity: 1;
+    .#{$module-name}__input {
+      margin-bottom: 0;
+      border: 0.1rem solid var(--error);
     }
 
-    .#{$module-name}__icon--edit {
-      opacity: 0 !important; //sass-lint:disable-line no-important
-    }
   }
 }
