--- a/styles/components/form/fields/_toggle-button-group.scss
+++ b/styles/components/form/fields/_toggle-button-group.scss
@@ -8,13 +8,21 @@ $component-name: form-field-togglebutton-group;
     margin: unit(1);
   }
 
+
   &__error {
     opacity: 0;
     max-height: 0;
-    color: var(--error);
-    margin: unit(0.5) 0;
+    background: var(--error);
+    color: var(--text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
+    background: var(--error);
+    padding: 0.5rem 0.25rem;
+    display: flex;
+
+    svg {
+      max-height: 1.2rem;
+    }
   }
 
   &--has-error {
@@ -22,5 +30,11 @@ $component-name: form-field-togglebutton-group;
       opacity: 1;
       max-height: 50px;
     }
+
+    .form-field__inline {
+      margin-bottom: 0;
+      border: 0.1rem solid var(--error);
+    }
+
   }
 }
