--- a/styles/components/form/fields/_toggle.scss
+++ b/styles/components/form/fields/_toggle.scss
@@ -58,13 +58,13 @@ $border-space: 0.1rem;
 
   &__error {
     opacity: 0;
-    max-height: 0;
     background: var(--error);
     color: var(--text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
     padding: 0.5rem 0.25rem;
     display: flex;
+    align-items: center;
 
     svg {
       max-height: 1.2rem;
@@ -74,7 +74,6 @@ $border-space: 0.1rem;
   &--has-error {
     .#{$component-name}__error {
       opacity: 1;
-      max-height: 50px;
     }
 
     .#{$component-name} {
