--- a/styles/components/form/fields/_radio-group.scss
+++ b/styles/components/form/fields/_radio-group.scss
@@ -5,13 +5,13 @@ $component-name: form-field-radio-group;
 
   &__error {
     opacity: 0;
-    max-height: 0;
     background: var(--error);
     color: var(--text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
     padding: 0.5rem 0.25rem;
     display: flex;
+    align-items: center;
 
     svg {
       max-height: 1.2rem;
@@ -21,7 +21,6 @@ $component-name: form-field-radio-group;
   &--has-error {
     .#{$component-name}__error {
       opacity: 1;
-      max-height: 50px;
     }
 
     .#{$component-name} {
