--- a/styles/components/form/fields/_text.scss
+++ b/styles/components/form/fields/_text.scss
@@ -37,13 +37,13 @@ $module-name: form-field-text;
 
   &__error {
     opacity: 0;
-    max-height: 0;
     background: var(--error);
     color: var(--text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
     padding: 0.5rem 0.25rem;
     display: flex;
+    align-items: center;
 
     svg {
       max-height: 1.2rem;
@@ -53,7 +53,6 @@ $module-name: form-field-text;
   &--has-error {
     .#{$module-name}__error {
       opacity: 1;
-      max-height: 50px;
     }
 
     .#{$module-name}__input {
