--- a/styles/components/form/fields/_textarea.scss
+++ b/styles/components/form/fields/_textarea.scss
@@ -16,17 +16,17 @@ $component-name: form-fields-textarea;
 
   &__error {
     opacity: 0;
-    max-height: 0;
     color: var(--error);
     margin: unit(0.5) 0;
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
+    display: flex;
+    align-items: center;
   }
 
   &--has-error {
     .#{$component-name}__error {
       opacity: 1;
-      max-height: 50px;
     }
   }
 }
