--- a/styles/components/form/fields/_toggle-button-group.scss
+++ b/styles/components/form/fields/_toggle-button-group.scss
@@ -11,13 +11,13 @@ $component-name: form-field-togglebutton-group;
 
   &__error {
     opacity: 0;
-    max-height: 0;
     background: var(--error);
     color: var(--text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
     padding: 0.5rem 0.25rem;
     display: flex;
+    align-items: center;
 
     svg {
       max-height: 1.2rem;
@@ -27,7 +27,6 @@ $component-name: form-field-togglebutton-group;
   &--has-error {
     .#{$component-name}__error {
       opacity: 1;
-      max-height: 50px;
     }
 
     .form-field__inline {
