Update basic (generic) dialog

--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -13,6 +13,10 @@
   overflow-x: hidden;
   overflow-y: auto;
 
+  &--generic {
+    max-width: none;
+  }
+
   &--notice {
     border-color: var(--info);
   }
