--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -62,7 +62,7 @@ $export-ui-classes: true !default;
 @include palette-set('link', color('neon-coral'));
 @include palette-set('light-background', color('cyber-grape'));
 @include palette-set('dark-background', color('rich-black'));
-@include palette-set('modal-main-panel', color('cyber-grape'));
+@include palette-set('modal-main-panel', color('navy-taupe'));
 @include palette-set('modal-background', color('navy-taupe'));
 @include palette-set('info', color('sea-serpent'));
 @include palette-set('notice', color('sea-green'));
