--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -63,7 +63,7 @@ $export-ui-classes: true !default;
 @include palette-set('light-background', color('cyber-grape'));
 @include palette-set('dark-background', color('rich-black'));
 @include palette-set('modal-main-panel', color('navy-taupe'));
-@include palette-set('modal-background', color('navy-taupe'));
+@include palette-set('modal-background', color('cyber-grape'));
 @include palette-set('info', color('sea-serpent'));
 @include palette-set('notice', color('sea-green'));
 @include palette-set('warning', color('mustard'));
