--- a/styles/components/form/fields/_text.scss
+++ b/styles/components/form/fields/_text.scss
@@ -38,7 +38,7 @@ $module-name: form-field-text;
   &__error {
     opacity: 0;
     background: var(--error);
-    color: var(--text);
+    color: var(--form-error-text);
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
     padding: 0.5rem 0.25rem;
