fix dialog background color

--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -1,6 +1,6 @@
 .dialog {
   max-width: 50rem;
-  background: var(--cyber-grape);
+  background: var(--color-cyber-grape);
   color: var(--text-light);
   box-shadow: 0 0 4rem 0 var(--modal-window-box-shadow);
   position: relative;
