--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -16,7 +16,7 @@
   &__main {
     display: flex;
     width: 100%;
-    padding: 2rem 3rem;
+    padding: 2rem 3rem 0;
 
     &-content {
       order: 1;
