--- a/styles/global/core/_normalize.scss
+++ b/styles/global/core/_normalize.scss
@@ -42,19 +42,19 @@
   // Typography
   //
 
-  // Remove top margins from headings
-  //
-  // By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
-  // margin for easier control within type scales as it avoids margin collapsing.
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 0;
-    // margin-bottom: 0.5rem;
-  }
+  // // Remove top margins from headings
+  // //
+  // // By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
+  // // margin for easier control within type scales as it avoids margin collapsing.
+  // h1,
+  // h2,
+  // h3,
+  // h4,
+  // h5,
+  // h6 {
+  //   margin-top: 0;
+  //   // margin-bottom: 0.5rem;
+  // }
 
   // Reset margins on paragraphs
   //
@@ -63,6 +63,7 @@
   p {
     margin-top: 1rem;
     margin-bottom: 1rem;
+    line-height: 1.25;
   }
 
   ol,
