fix sass linting

--- a/styles/components/form/fields/_toggle.scss
+++ b/styles/components/form/fields/_toggle.scss
@@ -87,7 +87,7 @@ $border-space: 0.1rem;
   &--disabled {
     .#{$component-name} {
       &__button {
-        opacity: .5;
+        opacity: 0.5;
       }
     }
   }
