--- a/styles/components/form/fields/_text.scss
+++ b/styles/components/form/fields/_text.scss
@@ -53,6 +53,9 @@ $module-name: form-field-text;
   &--area {
     display: block;
     width: 100%;
+    min-height: 14rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   &--has-error {
