--- a/styles/components/form/fields/_range.scss
+++ b/styles/components/form/fields/_range.scss
@@ -20,8 +20,9 @@ input {
       height: 2rem;
       width: 2rem;
       border-radius: 50%;
-      background: var(--primary);
+      background-color: var(--primary);
       cursor: pointer;
+      border: 0;
       appearance: none;
       margin-top: -0.5rem;
     }
