Fix stack trace styles

--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -95,7 +95,9 @@
     border-color: var(--error);
 
     .error__stack-trace {
+      width: 100%;
       white-space: pre-wrap;
+      word-break: break-all;
     }
   }
 
