--- a/styles/components/_dialog.scss
+++ b/styles/components/_dialog.scss
@@ -35,6 +35,8 @@
     &-icon {
       order: 1;
       flex: 0 0 10rem;
+      display: flex;
+      align-items: center;
 
       .icon {
         height: 7.5rem;
@@ -69,7 +71,7 @@
   }
 
   &__footer {
-    margin: 0 3rem 2rem;
+    margin: 2rem 3rem 2rem;
     text-align: right;
 
     .button {
