--- a/styles/components/form/fields/_slider.scss
+++ b/styles/components/form/fields/_slider.scss
@@ -1,13 +1,8 @@
-@mixin grid($size, $color: rgba(0, 0, 0, 0.1), $color2: rgba(255, 255, 255, 0.1)) {
-  background-image: linear-gradient(45deg, $color 25%, $color2 25%, $color2 75%, $color 75%, $color),
-                  linear-gradient(45deg, $color 25%, $color2 25%, $color2 75%, $color 75%, $color);
-  background-size: $size*2 $size*2;
-  background-position: 0 0, $size $size;
-}
 
 .form-field-slider {
   $touch-height: 36px;
   $height: $touch-height * 3;
+  $align-margin: $touch-height; // left-right margins
 
   --active-color: var(--color-sea-green);
   --slider-color: var(--color-platinum);
@@ -15,14 +10,13 @@
   --tooltip-color: var(--color-cyber-grape);
   --label-color: var(--color-white);
 
-  // @include grid($touch-height);
-
   &__tracks {
     position: absolute;
     height: $touch-height;
     width: 100%;
     z-index: 1;
     top: $height * 0.5;
+    // margin: -
     transform: translate(0, -50%);
   }
 
@@ -47,12 +41,12 @@
     cursor: pointer;
 
     &:first-child {
-      padding-left: $touch-height * .5;
-      transform: translate(-($touch-height * .5), -50%);
+      padding-left: $touch-height * 0.5;
+      transform: translate(-($touch-height * 0.5), -50%);
 
       .form-field-slider__track-line {
-        left: $touch-height * .5;
-        width: calc(100% - #{$touch-height * .5});
+        left: $touch-height * 0.5;
+        width: calc(100% - #{$touch-height * 0.5});
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
         background-color: var(--active-color);
@@ -60,10 +54,10 @@
     }
 
     &:last-child {
-      padding-right: $touch-height * .5;
+      padding-right: $touch-height * 0.5;
 
       .form-field-slider__track-line {
-        width: calc(100% - #{$touch-height * .5});
+        width: calc(100% - #{$touch-height * 0.5});
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
       }
@@ -82,7 +76,7 @@
     background: var(--tooltip-color);
     color: var(--label-color);
     border-radius: 50% 50% 50% 0;
-    transform: translate(-50%, -.25 * $tooltip-size) rotate(-45deg);
+    transform: translate(-50%, -0.25 * $tooltip-size) rotate(-45deg);
     opacity: 0;
     transition: opacity var(--animation-duration-fast) ease;
 
@@ -106,7 +100,7 @@
 
   &__ticks {
     position: relative;
-    top: $height * .5;
+    top: $height * 0.5;
     left: 0;
     width: 100%;
   }
@@ -145,7 +139,6 @@
     position: absolute;
     top: $height * 0.5;
     transform: translate(-50%, -50%);
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     z-index: 400;
     width: $height;
     height: $height;
@@ -159,13 +152,12 @@
     position: absolute;
     top: $height * 0.5;
     transform: translate(-50%, -50%);
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     z-index: 300;
     width: $touch-height / $scale;
     height: $touch-height / $scale;
-    border: 0px;
+    border: 0;
     border-radius: 50%;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 1px 1px var(--drop-shadow-color);
     background-color: var(--active-color);
     transition: transform var(--animation-duration-fast) ease;
 
@@ -180,10 +172,10 @@
 
   &__slider {
     position: relative;
-    width: calc(100% - #{$touch-height * 2});
+    width: calc(100% - #{$align-margin * 2});
     height: $height;
-    margin-left: $touch-height;
-    margin-right: $touch-height;
+    margin-left: $align-margin;
+    margin-right: $align-margin;
 
     &--vas,
     &--likert {
