--- a/styles/global/_default.scss
+++ b/styles/global/_default.scss
@@ -192,10 +192,10 @@ $categorical-colors: (
 
 // Protocol Schema Sequence
 $schema-colors: (
-  'sea-serpent',
+  'platinum--dark',
   'cyber-grape',
   'slate-blue',
-  'paradise-pink',
+  'sea-serpent',
   'cerulean-blue',
   'mustard',
   'neon-carrot',
