--- a/styles/components/form/fields/_slider.scss
+++ b/styles/components/form/fields/_slider.scss
@@ -46,8 +46,6 @@
       .form-field-slider__track-line {
         left: $touch-height * 0.5;
         width: calc(100% - #{$touch-height * 0.5});
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
         background-color: var(--active-color);
       }
     }
@@ -57,8 +55,6 @@
 
       .form-field-slider__track-line {
         width: calc(100% - #{$touch-height * 0.5});
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
       }
     }
   }
@@ -158,7 +154,8 @@
     border-radius: 50%;
     box-shadow: 1px 1px 1px 1px var(--drop-shadow-color);
     background-color: var(--active-color);
-    transition: transform var(--animation-duration-fast) ease;
+    transition-property: transform, opacity, filter;
+    transition-duration: var(--animation-duration-fast), var(--animation-duration-fast), var(--animation-duration-fast);
 
     &--is-disabled {
       background-color: var(--disabled-color);
@@ -187,6 +184,18 @@
           .form-field-slider__track-line {
             background-color: var(--slider-color);
           }
+        }
+      }
+    }
+
+    &--not-set {
+      .form-field-slider__marker {
+        opacity: 0.8;
+        filter: saturate(0);
+
+        &--is-active {
+          opacity: 1;
+          filter: initial;
         }
       }
     }
