--- a/styles/components/form/fields/_slider.scss
+++ b/styles/components/form/fields/_slider.scss
@@ -1,15 +1,16 @@
 $module-name: form-field-slider;
 
 .#{$module-name} {
-  $touch-height: 36px;
+  $touch-height: 2.4rem;
   $height: $touch-height * 3;
   $align-margin: $touch-height; // left-right margins
 
   --active-color: var(--color-sea-green);
   --slider-color: var(--color-platinum);
   --disabled-color: var(--color-charcoal);
-  --tooltip-color: var(--color-cyber-grape);
   --label-color: var(--color-white);
+  --tooltip-color: var(--color-white);
+  --tooltip-label: var(--text-dark);
 
   border-radius: 1rem 1rem 0 0;
   background-color: var(--input-background);
@@ -76,7 +77,7 @@ $module-name: form-field-slider;
     justify-content: center;
     align-items: center;
     background: var(--tooltip-color);
-    color: var(--label-color);
+    color: var(--tooltip-label);
     border-radius: 50% 50% 50% 0;
     transform: translate(-50%, -0.25 * $tooltip-size) rotate(-45deg);
     opacity: 0;
@@ -158,7 +159,7 @@ $module-name: form-field-slider;
     width: $touch-height / $scale;
     height: $touch-height / $scale;
     border: 0;
-    border-radius: 50%;
+    border-radius: 100%;
     box-shadow: 1px 1px 1px 1px var(--drop-shadow-color);
     background-color: var(--active-color);
     transition-property: transform, opacity, filter;
