--- a/styles/components/form/fields/_slider.scss
+++ b/styles/components/form/fields/_slider.scss
@@ -3,7 +3,7 @@ $module-name: form-field-slider;
 .#{$module-name} {
   $touch-height: 2.4rem;
   $height: $touch-height * 3;
-  $align-margin: $touch-height; // left-right margins
+  $align-margin: $touch-height * 2; // left-right margins
 
   --active-color: var(--color-sea-green);
   --slider-color: var(--color-platinum);
@@ -17,6 +17,7 @@ $module-name: form-field-slider;
   border-width: 0.1rem;
   border-style: solid;
   border-color: transparent;
+  min-height: $touch-height * 3.5;
 
   &__tracks {
     position: absolute;
@@ -68,32 +69,37 @@ $module-name: form-field-slider;
   }
 
   &__tooltip {
-    $tooltip-size: $touch-height;
     position: absolute;
-    top: 0;
-    height: $tooltip-size;
-    width: $tooltip-size;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--tooltip-color);
+    bottom: 50%;
     color: var(--tooltip-label);
-    border-radius: 50% 50% 50% 0;
-    transform: translate(-50%, -0.25 * $tooltip-size) rotate(-45deg);
     opacity: 0;
     transition: opacity var(--animation-duration-fast) ease;
+    transform: translate(-0.05rem, #{-0.55 * $touch-height});
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      height: $touch-height * 0.5;
+      width: $touch-height * 0.5;
+      transform-origin: bottom left;
+      transform: rotate(-45deg);
+      background: var(--tooltip-color);
+    }
 
     &-label {
-      transform: rotate(45deg);
+      transform: translate(-50%, - 0.2 * $touch-height);
       font-size: 0.8rem;
-      white-space: nowrap;
       background: var(--tooltip-color);
-      height: $tooltip-size;
-      border-radius: $tooltip-size;
-      padding: 0 ($tooltip-size * 0.3);
+      border-radius: $touch-height * 0.5;
+      padding: 0.5rem #{$touch-height * 0.5};
       display: flex;
       justify-content: center;
       align-items: center;
+      width: max-content;
+      min-height: $touch-height;
+      max-width: $align-margin * 1.75;
     }
 
     &--is-active {
@@ -111,28 +117,29 @@ $module-name: form-field-slider;
   &__tick {
     position: absolute;
     top: 0;
-    width: $touch-height;
-    height: $touch-height;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    left: -0.15rem;
 
     &-label {
-      white-space: nowrap;
-      transform: translate(0, $touch-height);
+      position: absolute;
+      top: 0.5 * $touch-height;
+      transform: translate(-50%, 0);
       font-size: 0.75rem;
-      color: var(--label-color);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: max-content;
+      min-height: $touch-height;
+      max-width: $align-margin * 1.75;
     }
 
     &::after {
       content: '';
       position: absolute;
-      border-left: 2px solid var(--slider-color);
+      border-left: 0.15rem solid var(--slider-color);
       height: $touch-height;
       width: 0;
-      left: 50%;
-      top: 50%;
+      left: 0;
+      top: 0;
       transform: translate(-50%, -50%);
     }
   }
@@ -160,7 +167,6 @@ $module-name: form-field-slider;
     height: $touch-height / $scale;
     border: 0;
     border-radius: 100%;
-    box-shadow: 1px 1px 1px 1px var(--drop-shadow-color);
     background-color: var(--active-color);
     transition-property: transform, opacity, filter;
     transition-duration: var(--animation-duration-fast), var(--animation-duration-fast), var(--animation-duration-fast);
@@ -211,18 +217,16 @@ $module-name: form-field-slider;
 
   &__error {
     opacity: 0;
-    background: var(--error);
     max-height: 0;
-    display: flex;
     transition: opacity var(--animation-easing) var(--animation-duration-standard),
     max-height var(--animation-easing) var(--animation-duration-standard);
   }
 
   &__error-message {
     color: var(--form-error-text);
+    background: var(--error);
+    margin-top: $touch-height * 0.5;
     padding: 0.5rem 0.25rem;
-    display: flex;
-    align-items: center;
 
     svg {
       max-height: 1.2rem;
