--- a/components/Fields/DatePicker/DatePicker.scss
+++ b/components/Fields/DatePicker/DatePicker.scss
@@ -21,21 +21,7 @@
     max-height: 250px;
   }
 
-  &__years {
-    flex: 0 1 100%;
-    overflow-y: scroll;
-  }
-
-  &__months,
-  &__days {
-    flex: 0 1 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  &__year,
-  &__month,
-  &__day {
+  &__range-item {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,55 +29,73 @@
     cursor: pointer;
     border-radius: 50%;
 
-    &--active {
+    &--is-active {
       background: red;
-      display: inline-block;
     }
   }
 
-  &__year {
+  &__range-picker {
     flex: 0 1 100%;
-  }
 
-  &__month {
-    flex: 0 1 33%;
-  }
-
-  &__day {
-    flex: 0 1 14%;
-  }
-
-  @media only screen and (max-width: 10000px) {
-    &__panels {
-      display: block;
-      width: 100%;
-      overflow: hidden;
-      height: 400px;
-      position: relative;
-    }
-
-    &__panel {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+    &--month,
+    &--day {
       display: flex;
-      flex-direction: column;
-      transform: translateX(100%);
-      transition: transform ease 300ms;
+      flex-wrap: wrap;
+    }
 
-      &--is-active {
-        transform: translateX(0);
-      }
+    &--year {
+      overflow-y: scroll;
 
-      &--is-complete {
-        transform: translateX(-100%);
+      .date-picker__range-item {
+        flex: 0 1 100%;
       }
     }
 
-    &__panel-navigation {
-      display: block;
+    &--month {
+      .date-picker__range-item {
+
+        flex: 0 1 33%;
+      }
     }
-  }
+
+    &--day {
+      .date-picker__range-item {
+        flex: 0 1 14%;
+      }
+    }
+  };
+
+  // @media only screen and (max-width: 10000px) {
+  //   &__panels {
+  //     display: block;
+  //     width: 100%;
+  //     overflow: hidden;
+  //     height: 400px;
+  //     position: relative;
+  //   }
+
+  //   &__panel {
+  //     position: absolute;
+  //     top: 0;
+  //     left: 0;
+  //     width: 100%;
+  //     height: 100%;
+  //     display: flex;
+  //     flex-direction: column;
+  //     transform: translateX(100%);
+  //     transition: transform ease 300ms;
+
+  //     &--is-active {
+  //       transform: translateX(0);
+  //     }
+
+  //     &--is-complete {
+  //       transform: translateX(-100%);
+  //     }
+  //   }
+
+  //   &__panel-navigation {
+  //     display: block;
+  //   }
+  // }
 }
