--- a/components/Fields/DatePicker/DatePicker.scss
+++ b/components/Fields/DatePicker/DatePicker.scss
@@ -9,10 +9,23 @@
     display: flex;
     flex-direction: column;
     flex: 0 1 33%;
+    pointer-events: none;
+    opacity: 0.33;
+    transition: opacity ease 300ms;
+
+    &--is-active,
+    &--is-complete {
+      opacity: 1;
+      pointer-events: all;
+    }
   }
 
   &__panel-navigation {
     display: none;
+    justify-content: center;
+    align-items: center;
+    background: purple;
+    padding: 1rem 0;
   }
 
   &__panel-content {
@@ -21,16 +34,31 @@
     max-height: 250px;
   }
 
+  &__highlight {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: 2rem;
+    width: 100%;
+    max-width: 4rem;
+    padding: 0.5rem 0;
+    border-radius: 0.5rem;
+    background-color: transparent;
+    transition: background-color ease 300ms;
+  }
+
   &__range-item {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30px;
     cursor: pointer;
-    border-radius: 50%;
 
     &--is-active {
-      background: red;
+      .date-picker__highlight {
+        background-color: white;
+        color: purple;
+      }
     }
   }
 
@@ -65,37 +93,37 @@
     }
   };
 
-  // @media only screen and (max-width: 10000px) {
-  //   &__panels {
-  //     display: block;
-  //     width: 100%;
-  //     overflow: hidden;
-  //     height: 400px;
-  //     position: relative;
-  //   }
+  @media only screen and (max-width: 1280px) {
+    &__panels {
+      display: block;
+      width: 100%;
+      overflow: hidden;
+      height: 400px;
+      position: relative;
+    }
 
-  //   &__panel {
-  //     position: absolute;
-  //     top: 0;
-  //     left: 0;
-  //     width: 100%;
-  //     height: 100%;
-  //     display: flex;
-  //     flex-direction: column;
-  //     transform: translateX(100%);
-  //     transition: transform ease 300ms;
+    &__panel {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      transform: translateX(100%);
+      transition: transform ease 300ms;
 
-  //     &--is-active {
-  //       transform: translateX(0);
-  //     }
+      &--is-active {
+        transform: translateX(0);
+      }
 
-  //     &--is-complete {
-  //       transform: translateX(-100%);
-  //     }
-  //   }
+      &--is-complete {
+        transform: translateX(-100%);
+      }
+    }
 
-  //   &__panel-navigation {
-  //     display: block;
-  //   }
-  // }
+    &__panel-navigation {
+      display: flex;
+    }
+  }
 }
