--- a/components/Fields/DatePicker/DatePicker.scss
+++ b/components/Fields/DatePicker/DatePicker.scss
@@ -20,12 +20,8 @@
     }
   }
 
-  &__panel-navigation {
+  &__panel-preview {
     display: none;
-    justify-content: center;
-    align-items: center;
-    background: purple;
-    padding: 1rem 0;
   }
 
   &__panel-content {
@@ -108,8 +104,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      display: flex;
-      flex-direction: column;
       transform: translateX(100%);
       transition: transform ease 300ms;
 
@@ -122,8 +116,12 @@
       }
     }
 
-    &__panel-navigation {
+    &__panel-preview {
       display: flex;
+      justify-content: center;
+      align-items: center;
+      background: purple;
+      padding: 1rem 0;
     }
   }
 }
