--- a/components/Fields/DatePicker/DatePicker.scss
+++ b/components/Fields/DatePicker/DatePicker.scss
@@ -18,10 +18,23 @@
       opacity: 1;
       pointer-events: all;
     }
+
+    &--year {
+      background: blue;
+    }
+
+    &--month {
+      background: red;
+    }
+
+    &--day {
+      background: green;
+    }
   }
 
   &__panel-preview {
     display: none;
+    min-height: 250px;
   }
 
   &__panel-content {
@@ -53,7 +66,6 @@
     &--is-active {
       .date-picker__highlight {
         background-color: white;
-        color: purple;
       }
     }
   }
@@ -90,38 +102,65 @@
   };
 
   @media only screen and (max-width: 1280px) {
-    &__panels {
-      display: block;
-      width: 100%;
-      overflow: hidden;
-      height: 400px;
-      position: relative;
-    }
-
-    &__panel {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transform: translateX(100%);
-      transition: transform ease 300ms;
-
-      &--is-active {
-        transform: translateX(0);
-      }
-
-      &--is-complete {
-        transform: translateX(-100%);
-      }
-    }
-
     &__panel-preview {
+      flex-grow: 1;
+      flex-shrink: 1;
+      flex-basis: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: purple;
-      padding: 1rem 0;
+      overflow: hidden;
+    }
+
+    &__panel-content {
+      flex-grow: 1;
+      flex-shrink: 1;
+      flex-basis: 0;
+      overflow: hidden;
+    }
+
+    &__panel-preview,
+    &__panel-content {
+      transition: opacity ease 300ms;
+    }
+
+    &__panel {
+      flex-direction: row;
+      position: relative;
+      transition: flex-basis ease 300ms;
+      flex-basis: 0;
+      overflow: hidden;
+
+      &--is-active {
+        flex-basis: 100%;
+
+        .date-picker__panel-content {
+          flex-basis: 100%;
+          opacity: 1;
+        }
+        .date-picker__panel-preview {
+          flex-basis: 0;
+          opacity: 0;
+        }
+      }
+
+      &--is-complete {
+        flex-basis: 33%;
+
+        .date-picker__panel-content {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          z-index: -1;
+        }
+        .date-picker__panel-preview {
+          flex-basis: 100%;
+          opacity: 1;
+        }
+      }
     }
   }
 }
