--- a/styles/components/form/fields/_date-picker.scss
+++ b/styles/components/form/fields/_date-picker.scss
@@ -89,17 +89,23 @@ $height: 18rem;
     display: block;
     width: 100%;
     overflow: hidden;
-    transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1) scaleY(0);
     box-sizing: border-box;
     border-top: 2px solid transparent;
     height: 0;
     position: relative;
-    transition: height var(--animation-easing) var(--animation-duration-standard),
-      border-top-color var(--animation-easing) var(--animation-duration-standard);
+    transform-origin: top left;
+    transition: height var(--animation-easing) var(--animation-duration-slow) var(--animation-duration-standard),
+    transform var(--animation-easing) var(--animation-duration-slow) var(--animation-duration-standard),
+    border-top-color var(--animation-easing) var(--animation-duration-standard);
 
     &--is-open {
       height: $height;
+      transform: scaleY(1);
       border-top-color: var(--active-color);
+      transition: height var(--animation-easing) var(--animation-duration-slow),
+      transform var(--animation-easing) var(--animation-duration-slow),
+      border-top-color var(--animation-easing) var(--animation-duration-standard);
     }
   }
 
@@ -110,13 +116,14 @@ $height: 18rem;
     width: 100%;
     height: 100%;
     display: flex;
+    box-sizing: content-box;
     background-color: var(--input-background);
     flex-direction: column;
     transform: translateX(100%);
-    transition: transform ease 300ms;
+    transition: transform var(--animation-easing) var(--animation-duration-slow) var(--animation-duration-standard);
     border-color: rgba(0, 0, 0, 0.2);
     border-style: solid;
-    border-width: 0 0 0 2px;
+    border-width: 0 2px 0 0;
 
     &--is-active {
       transform: translateX(0);
@@ -139,10 +146,8 @@ $height: 18rem;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    height: 2rem;
-    width: 100%;
-    padding: 0.5rem 0;
-    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
     background-color: transparent;
     transition: background-color ease $animation-speed;
   }
