--- a/styles/components/form/fields/_date-picker.scss
+++ b/styles/components/form/fields/_date-picker.scss
@@ -174,7 +174,7 @@ $height: 18rem;
     width: 100%;
 
     &--year {
-      @extend .scrollable;
+      @extend .scrollable !optional;
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
       .#{$module-name}__range-item {
         padding: 1rem 0;
