Improve focus behaviour

--- a/styles/components/form/fields/_date-picker.scss
+++ b/styles/components/form/fields/_date-picker.scss
@@ -231,6 +231,7 @@ $height: 18rem;
     }
   }
 
+  &:focus,
   &--is-active {
     .#{$module-name}__preview {
       border-bottom-color: var(--active-color);
